<resources>
    <string name="app_name">EmployeeTrack(Employee)</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="htopic1">Topic One\nUsing this system it is possible to track all the activities of employee using cell phone which is provided by the particular organization and it is also possible for manager to know the behaviour of the employee according to their cell phone activities like Incoming and Outgoing call history, SMS history, Web history, Data usages.</string>
    <string name="htopic2">Topic Two\nUsing this system it is possible to track all the activities of employee using cell phone which is provided by the particular organization and it is also possible for manager to know the behaviour of the employee according to their cell phone activities like Incoming and Outgoing call history, SMS history, Web history, Data usages.</string>
    <string name="htopic3">Topic Three\nUsing this system it is possible to track all the activities of employee using cell phone which is provided by the particular organization and it is also possible for manager to know the behaviour of the employee according to their cell phone activities like Incoming and Outgoing call history, SMS history, Web history, Data usages.</string>
    <string name="htopic4">Topic Four\nUsing this system it is possible to track all the activities of employee using cell phone which is provided by the particular organization and it is also possible for manager to know the behaviour of the employee according to their cell phone activities like Incoming and Outgoing call history, SMS history, Web history, Data usages.</string>
    <string name="htopic5">Topic Five\nUsing this system it is possible to track all the activities of employee using cell phone which is provided by the particular organization and it is also possible for manager to know the behaviour of the employee according to their cell phone activities like Incoming and Outgoing call history, SMS history, Web history, Data usages.</string>
    <string name="title_activity_maps">Map</string>
</resources>
