<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="beit.employee.employeetrackemployee.Help">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="3dp"
            android:textSize="18dp"
            android:padding="2dp"
            android:background="@drawable/buttonborder"
            android:text="@string/htopic1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="3dp"
            android:textSize="18dp"
            android:padding="2dp"
            android:background="@drawable/buttonborder"
            android:text="@string/htopic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="3dp"
            android:textSize="18dp"
            android:padding="2dp"
            android:background="@drawable/buttonborder"
            android:text="@string/htopic3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="3dp"
            android:textSize="18dp"
            android:padding="2dp"
            android:background="@drawable/buttonborder"
            android:text="@string/htopic4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="3dp"
            android:textSize="18dp"
            android:padding="2dp"
            android:background="@drawable/buttonborder"
            android:text="@string/htopic5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
